# OS_4_lab

./: .gitignore  CMakeLists.txt  README.md
doc/: DYNAMIC_LOADING_SYNTAX.md  OS_4_lab_report.docx
include/: contracts.h
lib1/: lib1.c
lib2/: lib2.c
program1/: main.c
program2/: main.c
